Fix blurred text on video playback

--- a/public/stylesheets/_instalurker.scss
+++ b/public/stylesheets/_instalurker.scss
@@ -421,17 +421,18 @@ body.modal-open {
     padding: $reveal-modal-padding 0 0 0;
     border: none;
     border-radius: 0;
+    overflow-y: scroll;
   }
   @media #{$small-up} {
-    overflow-y: scroll;
     height: 100%;
   }
   @media #{$medium-up} {
     width: auto;
     height: auto;
-    overflow: auto;
+    overflow: hidden;
     top: 50%;
     transform: translateY(-50%);
+    padding:5px;
   }
 }
 
